# counsel

./: .env.example  .gitignore  LICENSE  Makefile  README.md  Rules.md  pyproject.toml
counsel/: __init__.py
counsel/agent/: loop.py  prompts.py
counsel/bench/: answer_key_szechuan_sauce.json  harness.py  naive_baseline.py
counsel/docs/: accuracy-report.md  architecture.md  coverage-and-killchain.md  dataset-docs.md  dsl-guide.md  sample-execution-log.md  threat-model.md  written-description.md
counsel/docs/adr/: 0001-engine-owns-the-verdict.md  0002-typed-mcp-server-not-shell.md  README.md  (+3 more)
counsel/engine/: confidence.py  dsl.py  model.py
counsel/launcher/: demo.py  main.py
counsel/ledger/: ledger.py
counsel/mcp_server/: config.py  server.py
counsel/redteam/: suite.py
counsel/report/: html_report.py  tui.py
counsel/rules/: c2_communication.yaml  credential_access.yaml  defense_evasion.yaml  discovery.yaml  lateral_movement.yaml  payload_execution_chain.yaml  persistence_run_key.yaml  process_injection.yaml
counsel/verifier/: verify.py
counsel/web/: app.py  dashboard.html
ideas/: 00-strategy-and-comparison.md  01-devils-advocate.md  02-counsel.md  03-solo-accuracy-and-execution-plan.md  04-exceed-expectations.md  05-technical-design-spec.md  06-uiux-design.md  07-evaluation-and-threat-model.md
scripts/: setup-wsl.sh  wsl-setup.sh
tests/: test_demo_command.py  test_engine.py  test_fixture_accuracy.py  test_naive_comparison.py  test_rate_limit_pacing.py  test_rt8_agentless.py  test_rt9_contradiction.py
website/: _config.yml  index.html
(+35 files in other folders)
