[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["counsel"]

[project]
name = "counsel"
version = "1.0.0"
description = "COUNSEL - Corroboration-First Autonomous DFIR Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.60.0",
    "cryptography>=42.0",
    "pynacl>=1.5",
    "jinja2>=3.1",
    "typer>=0.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
counsel = "counsel.launcher.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
